add swagger tasks
