# swagger.json
@@ -12,8 +12,8 @@
   "consumes": ["application/json", "multipart/form-data"],
   "produces": ["application/json"],
   "servers": [
-    { "url": "https://project-codemasters02-backend.onrender.com" },
-    { "url": "http://localhost:3000" }
+    { "url": "https://project-codemasters02-backend.onrender.com/api" },
+    { "url": "http://localhost:3000/api" }
   ],
 
   "tags": [
@@ -36,7 +36,7 @@
   ],
 
   "paths": {
-    "/api/auth/register": {
+    "/auth/register": {
       "post": {
         "tags": ["Auth"],
         "summary": "User registration",
@@ -84,7 +84,7 @@
       }
     },
 
-    "/api/auth/login": {
+    "/auth/login": {
       "post": {
         "tags": ["Auth"],
         "summary": "User login",
@@ -128,7 +128,7 @@
       }
     },
 
-    "/api/auth/logout": {
+    "/auth/logout": {
       "post": {
         "tags": ["Auth"],
         "summary": "User logout",
@@ -151,7 +151,7 @@
       }
     },
 
-    "/api/users/current": {
+    "/users/current": {
       "get": {
         "tags": ["User"],
         "summary": "Get current user info",
@@ -180,7 +180,7 @@
       }
     },
 
-    "/api/users": {
+    "/users": {
       "patch": {
         "tags": ["User"],
         "summary": "Edit user info",
@@ -228,7 +228,7 @@
       }
     },
 
-    "/api/reviews": {
+    "/reviews": {
       "get": {
         "tags": ["Reviews"],
         "summary": "Get all reviews",
@@ -263,7 +263,7 @@
       }
     },
 
-    "/api/reviews/own": {
+    "/reviews/own": {
       "get": {
         "tags": ["Reviews"],
         "summary": "Get own review",
@@ -412,6 +412,142 @@
       "delete": {
         "tags": ["Reviews"],
         "summary": "Delete own review",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorNotFoundResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/tasks": {
+      "get": {
+        "tags": ["Tasks"],
+        "summary": "Get all tasks of period",
+        "parameters": [],
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AllTasksOfPeriodResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      },
+      "post": {
+        "tags": ["Tasks"],
+        "summary": "Add a task",
+        "parameters": [],
+        "security": [],
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddTaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/tasks{id}": {
+      "patch": {
+        "tags": ["Tasks"],
+        "summary": "Edit the task",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "description": "Task's object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TaskRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorNotFoundResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      },
+
+      "delete": {
+        "tags": ["Tasks"],
+        "summary": "Delete the task",
         "parameters": [],
         "security": [{ "Bearer": [] }],
         "responses": {
@@ -723,6 +859,190 @@
               "description": "Review's updated",
               "example": "2023-08-13T00:36:52.708Z"
             }
+          }
+        }
+      },
+
+      "AllTasksOfPeriodResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "description": "Review's id",
+              "example": "64d825a42801c1bed5142c77"
+            },
+            "rating": {
+              "type": "number",
+              "description": "Review's rating",
+              "example": "5"
+            },
+            "text": {
+              "type": "string",
+              "description": "Review's text",
+              "example": "Excellent"
+            },
+            "owner": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "description": "Users's id",
+                  "example": "64d4c9f19533de6a137d3542"
+                },
+                "name": {
+                  "type": "string",
+                  "description": "Users's name",
+                  "example": "User"
+                },
+                "avatar": {
+                  "type": "string",
+                  "description": "User's avatar",
+                  "example": ""
+                }
+              }
+            },
+            "createdAt": {
+              "type": "string",
+              "description": "Review's created",
+              "example": "2023-08-13T00:36:52.708Z"
+            },
+            "updatedAt": {
+              "type": "string",
+              "description": "Review's updated",
+              "example": "2023-08-13T00:36:52.708Z"
+            }
+          }
+        }
+      },
+
+      "TaskRequest": {
+        "type": "object",
+        "required": ["title", "start", "end", "priority", "date", "category"],
+        "properties": {
+          "title": {
+            "type": "number",
+            "description": "Task's title",
+            "example": "Learn React"
+          },
+          "start": {
+            "type": "string",
+            "description": "The time when task should be started",
+            "example": "09:00"
+          },
+          "end": {
+            "type": "string",
+            "description": "The time when task should be ended",
+            "example": "11:30"
+          },
+          "priority": {
+            "type": "string",
+            "description": "Task's priority",
+            "schema": {
+              "type": "string",
+              "enum": ["low", "medium", "high"]
+            },
+            "example": "medium"
+          },
+          "date": {
+            "type": "date",
+            "description": "The date when task should be done",
+            "example": "2023-12-31"
+          },
+          "category": {
+            "type": "date",
+            "description": "Task's category",
+            "schema": {
+              "type": "string",
+              "enum": ["to-do", "in-progress", "done"]
+            },
+            "example": "in-progress"
+          },
+          "owner": {
+            "type": "string",
+            "description": "Task's owner",
+            "example": "649ab7f56f47f612c3a161765"
+          },
+          "_id": {
+            "type": "string",
+            "description": "Task's id",
+            "example": "649ab7f56f47f612c3a16173"
+          },
+          "createdAt": {
+            "type": "date",
+            "description": "Date of created the task",
+            "example": "2023-06-28T09:59:14.548Z"
+          },
+          "updatedAt": {
+            "type": "date",
+            "description": "Date of updated the task",
+            "example": "2023-06-28T09:59:14.548Z"
+          }
+        }
+      },
+
+      "TaskResponse": {
+        "type": "object",
+        "required": ["title", "start", "end", "priority", "date", "category"],
+        "properties": {
+          "title": {
+            "type": "number",
+            "description": "Task's title",
+            "example": "Learn React"
+          },
+          "start": {
+            "type": "string",
+            "description": "The time when task should be started",
+            "example": "09:00"
+          },
+          "end": {
+            "type": "string",
+            "description": "The time when task should be ended",
+            "example": "11:30"
+          },
+          "priority": {
+            "type": "string",
+            "description": "Task's priority",
+            "schema": {
+              "type": "string",
+              "enum": ["low", "medium", "high"]
+            },
+            "example": "medium"
+          },
+          "date": {
+            "type": "date",
+            "description": "The date when task should be done",
+            "example": "2023-12-31"
+          },
+          "category": {
+            "type": "date",
+            "description": "Task's category",
+            "schema": {
+              "type": "string",
+              "enum": ["to-do", "in-progress", "done"]
+            },
+            "example": "in-progress"
+          },
+          "owner": {
+            "type": "string",
+            "description": "Task's owner",
+            "example": "649ab7f56f47f612c3a161765"
+          },
+          "_id": {
+            "type": "string",
+            "description": "Task's id",
+            "example": "649ab7f56f47f612c3a16173"
+          },
+          "createdAt": {
+            "type": "date",
+            "description": "Date of created the task",
+            "example": "2023-06-28T09:59:14.548Z"
+          },
+          "updatedAt": {
+            "type": "date",
+            "description": "Date of updated the task",
+            "example": "2023-06-28T09:59:14.548Z"
           }
         }
       },
